--- a/views/backoffice.xml
+++ b/views/backoffice.xml
@@ -4,7 +4,7 @@
     <field name="model">certificates</field>
     <field name="arch" type="xml">
       <kanban default_group_by="x_status">
-        <t t-name="card" class="m-3">
+        <t t-name="kanban-box" class="m-3">
           <div class="row">
             <div class="col-8">
               <label for="x_client">Cliente:</label>
